# SimAI

./: .gitignore  .gitmodules  128nodes.txt  DCN+DualToR_128g_8gps_100Gbps_A100  Dockerfile  README.md  Spectrum-X_128g_8gps_100Gbps_A100  Spectrum-X_128g_8gps_10Gbps_A100  Spectrum-X_9216g_8gps_100Gbps_A100  end_to_end_workload_flowsim.txt  end_to_end_workload_ns3.txt  flowsim.sh  ncclFlowModel_EndToEnd.csv  ncclFlowModel_EndToEnd_customized.csv  ncclFlowModel_EndToEnd_flowsim.csv  ncclFlowModel_EndToEnd_ns3.csv  ncclFlowModel_test1_dimension_utilization_0.csv  ncclFlowSim_EndToEnd.csv  plot_eval.ipynb  plot_eval_fct.ipynb  plot_eval_slowdown.ipynb  run_sweep.sh  simai_flowsim_EndToEnd.csv  simai_ns3_EndToEnd.csv  simai_ns3_test1_dimension_utilization_0.csv
astra-sim-alibabacloud/: CMakeLists.txt  build.sh
astra-sim-alibabacloud/astra-sim/network_frontend/analytical/: AnaSim.cc
astra-sim-alibabacloud/astra-sim/network_frontend/flowsim/: CMakeLists.txt  Chunk.cc  Chunk.h  EventQueue.cc  EventQueue.h  FlowSim.cc  FlowSim.h  FlowsimAstra.cc  FlowsimNetwork.cc  FlowsimNetwork.h  Topology.cc  Topology.h  TopologyBuilder.cc  TopologyBuilder.h
astra-sim-alibabacloud/astra-sim/network_frontend/flowsim-old/: Chunk.cc  FlowSim.cc  FlowsimAstra.cc  FlowsimNetwork.cc  FlowsimNetwork.h  Topology.cc
astra-sim-alibabacloud/astra-sim/network_frontend/flowsim-temp/: Chunk.cc  EventQueue.cc  FlowSim.h  FlowsimAstra.cc  FlowsimNetwork.cc  FlowsimNetwork.h  Link.h  Topology.h  TopologyBuilder.cc
astra-sim-alibabacloud/astra-sim/network_frontend/m4/: CMakeLists.txt  Chunk.cpp  Event.cpp  EventList.cpp  EventQueue.cpp  EventQueue.h  M4.cc  M4.h  M4Astra.cc  M4Network.cc  M4Network.h  Topology.cpp  Topology.h  TopologyBuilder.cpp  TopologyBuilder.h
astra-sim-alibabacloud/astra-sim/network_frontend/m4/config/: test_config.yaml
astra-sim-alibabacloud/astra-sim/network_frontend/m4/models/: gnn_layer_0.pt  gnn_layer_1.pt  gnn_layer_2.pt  lstmcell_rate.pt  lstmcell_rate_link.pt  lstmcell_time.pt  lstmcell_time_link.pt  output_layer.pt
astra-sim-alibabacloud/astra-sim/network_frontend/ns3/: AstraSimNetwork.cc  common.h  entry.h
astra-sim-alibabacloud/astra-sim/network_frontend/phynet/: SimAiMain.cc
astra-sim-alibabacloud/astra-sim/system/: AstraNetworkAPI.hh  AstraParamParse.hh  MockNcclLog.h  NetworkStat.hh  SharedBusStat.hh  StreamStat.hh  Sys.cc
astra-sim-alibabacloud/astra-sim/system/collective/: NcclTreeFlowModel.cc
astra-sim-alibabacloud/astra-sim/system/routing/: CMakeLists.txt
astra-sim-alibabacloud/astra-sim/system/routing/include/: FlowKey.h  RoutingFramework.h  TopologyParser.h
astra-sim-alibabacloud/astra-sim/system/routing/src/: RoutingFramework.cc  TopologyParser.cc
astra-sim-alibabacloud/astra-sim/system/routing/test/: test_spectrum_x.cpp
astra-sim-alibabacloud/astra-sim/workload/: CSVWriter.cc  Workload.cc
astra-sim-alibabacloud/inputs/config/: SimAI.conf
example/: microAllReduce_16gpus.txt  microAllReduce_32gpus.txt  workload_analytical_128gpu.txt
example/sweep/: SimAI.conf  microAllReduce.txt  topo_N0_M1.txt  topo_N16_M2.txt  topo_N16_M4.txt  topo_N16_M8.txt  topo_N1_M2.txt  topo_N1_M4.txt  topo_N1_M8.txt  topo_N2_M2.txt  topo_N2_M4.txt  topo_N2_M8.txt  topo_N4_M2.txt  topo_N4_M4.txt  topo_N4_M8.txt  topo_N8_M2.txt  topo_N8_M4.txt  topo_N8_M8.txt
mix/: llama_hpn7_fct.txt  llama_hpn7_fct_customized.txt  llama_hpn7_fct_ns3.txt  llama_hpn7_mix.tr
results/flowsim/: EndToEnd.csv  flowsim_fct.txt
results/m4/: EndToEnd.csv  m4_fct.txt
results/ns3/: EndToEnd.csv  ns3_fct.txt  test1_dimension_utilization_0.csv
scripts/: build.sh
